# IPKE

./: .dockerignore  .env  .env.example  .gitignore  .mailmap  AGENTS.md  ARCHITECTURE_CLEANUP_REPORT.md  ATTRIBUTION.md  BENCHMARK.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEAN_ARCHITECTURE.md  CONTEXT.md  DEVELOPMENT.md  Dockerfile  EXPERIMENT_ARCHITECTURE.txt  LICENSE  LICENSES.md  MIGRATION_GUIDE.md  Makefile  PUHTI_DEPLOYMENT_GUIDE.md  PUHTI_PERFORMANCE_ANALYSIS.md  README-DOCKER.md  README-THESIS.md  README.md  REPRODUCIBILITY.md  THESIS_DATA_DUMP.md  app.py  deploy-csc.sh  deploy-puhti.sh  details.md  docker-compose.optimized.yml  docker-compose.yml  evaluate.py  experiment_plan.md  full_experiment.py  gemini.md  generate_figure_schema.py  generate_figure_x.py  generate_large_pkg.py  (+15 more)
.github/workflows/: ci.yml
archive_2025-11-16/results/: 3m_marine_oem_sop_fixed.json
configs/: chunking_grid_core.yaml  chunking_grid_core_3m.yaml  chunking_grid_core_full.yaml  chunking_grid_v1.yaml  prompting_grid.yaml  prompting_p1_fire.yaml  prompting_resume.yaml
configs/archive/: prompting_grid.yaml  prompting_p1_fire.yaml  test_p1.yaml
datasets/paper/: INVENTORY.md  README.md  REVISION_NOTES.md  corpus_manifest.json  gold_depth_comparison.json  iaa_subset.json  public_sources_manifest.csv
demos/: test_p1_strategy.py  test_p2_strategy.py
docker/: Dockerfile  Dockerfile.optimized
docs/: metric-migration.md  neo4j_queries.md  reproducibility.md  research-vision.md
docs/adr/: 0001-implement-dsc-global-dp.md  0002-ecir-paper-replaces-thesis-numbers.md  0003-model-selection-and-preregistered-hypothesis.md  0004-ecir-resource-paper-primary.md  0005-ipke-method-paper-primary.md
docs/agents/: domain.md  ipke-bench-context.md  triage-labels.md
docs/annotation/: SIGN_OFF_ISSUE.md  audit_summary.md  constraint-types.md  guidelines.md  independent-annotator-workflow.md  requirement-classifications.json  requirement-classifications.template.json
docs/dataset/: annotation_schema.md  datasheet.md  ipke_issue_53_public_sources.md
docs/methods/: annotation-pipeline.md  dsc-implementation.md
docs/notes/: hardware-validation-rtx5060-cuda132.md
docs/paper/: 2026-07-04-execution-direction.md  (+5 more)
documents_samples/: result_sample.txt
k8s/: deploy.yaml
logs/: THESIS_DATA_DUMP.md
results/: 3m_marine_oem_sop_breakpoint_semantic.json  graph_topology_stats.csv  prompting_grid_analysis.md  prompting_reval.json  tierb_analysis.json  tierb_comparison_table.md
schemas/: ipke_annotation.schema.json  ipke_annotation_evidence.schema.json  ipke_paper_tiera.schema.json  ipke_review_packet.schema.json
scripts/: __init__.py  adjudicate.py  annotate_assisted.py  baseline_preflight.py  check_manifest_freshness.py  compute_iaa.py  constraint_blindness_report.py  download_llm.py  download_public_sources.py  enrich_manifest.py  eval_multiseed.py  experiment_lib.py  extract_public_documents.py  inspect_chunking.py  migrate_constraint_types.py  normalize_gold_annotations.py  paper_validate.py  plot_baseline_metrics.py  plot_chunking_comparison.py  plot_error_distribution.py  plot_fragmentation_penalty.py  plot_header_magnet.py  plot_prompting_comparison.py  plot_signal_dip.py  reclassify_pilot_gold.py  reevaluate_metrics.py  run_baseline_loops.py  run_chunking_comparison.py  run_experiments.py  run_pkg_extraction.py  run_prompting_experiments.py  run_thesis_experiments.py  run_tierb_evaluation.sh  segment_procedures.py  setup_iaa_subset.py  sign_off_gold.py  test_mistral_cuda.sh  test_mistral_metal.sh  tierA_pipeline.sh  validate_paper_gold.py
src/: exceptions.py  logging_config.py  middleware.py
tests/: __init__.py  conftest.py  test_annotation_evidence_schema.py  test_annotation_schema.py  test_api.py  test_build_summary_csv.py  test_canonicalizer.py  test_chunkers.py  test_compute_iaa.py  test_compute_iaa_eligibility.py  test_config.py  test_constraint_attachment.py  test_constraint_blindness_report.py  test_constraint_validator.py  test_cot_strategy.py  test_dedup_and_constraint_repair.py  test_epa_review_candidate.py  test_eval_multiseed.py  test_exceptions.py  test_experiment_paths.py  test_extractor_selection_modes.py  test_few_shot_strategy.py  test_graph_builder.py  test_graph_constants.py  test_iaa_smoke_only.py  test_integration.py  test_knowledge_engine.py  test_llm_backends.py  test_manifest_enrichment.py  test_multi_seed_sweep.py  test_new_tools.py  test_niosh_second_pass.py  test_packaging_config.py  test_paper_gold_files.py  test_paper_inventory.py  test_paper_schema_strict.py  test_paper_validate.py  test_processor.py  test_prompting.py  test_public_source_manifest.py  (+7 more)
tools/: __init__.py  annotate_gold.py  evaluate.py  iaa_check.py  plot_comparison.py  plot_efficiency.py  plotter.py  visualize_graph.py
uploaded_files/: .gitkeep
(+458 files in other folders)
