[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipke"
version = "0.1.0"
description = "Industrial Procedural Knowledge Extraction — Thesis-grade, privacy-preserving pipeline that reconstructs Procedural Knowledge Graphs from safety-critical industrial manuals"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=1.24.4,<2.0",
    "scipy>=1.11.3",
    "networkx>=3.1",
    "tqdm>=4.66.1",
    "spacy>=3.7.2",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
    "requests>=2.31.0",
    "jsonschema==4.20.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.104.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.24.0",
    "streamlit>=1.38.0",
    "pyvis>=0.3.2",
]
llm = [
    "llama-cpp-python==0.3.23",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.3",
]
neo4j = [
    "neo4j==5.14.0",
]
extras = [
    # PDF extraction
    "PyMuPDF>=1.23.0",
    # Office document processing
    "python-pptx>=0.6.23",
    "python-docx>=0.8.11",
    # OCR for image processing (heavy - ~1.5GB with models)
    "easyocr>=1.7.0",
    # Audio transcription (heavy - ~1GB with models)
    "openai-whisper>=20231117",
]
test-pdf = [
    # PDF extraction for tests that exercise the PDF backend.
    # Heavy OCR/audio/PDF groups stay opt-in via the `extras` extra.
    "PyMuPDF>=1.23.0",
]

[project.scripts]
ipke-api = "main:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv.sources]
llama-cpp-python = { url = "https://github.com/abetlen/llama-cpp-python/releases/download/v0.3.23-cu124/llama_cpp_python-0.3.23-py3-none-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }

[tool.uv]
# Platform-specific llama-cpp-python installs
# Apple Silicon (Metal):
#   uv sync --extra llm --index-url https://abetlen.github.io/llama-cpp-python/whl/metal
# Linux x86_64 (CUDA 12.4):
#   uv sync --extra llm
#   Uses the direct cu124 wheel pinned in [tool.uv.sources].
# CPU (default):
#   uv sync --extra llm
